--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_plugin_android_lifecycle: ^2.0.28
   uuid: ^4.5.1
   intl: ^0.20.0
+  cached_network_image: ^3.4.1
   
 
 
