--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about Android versioning at https://developer.android.com/studio/publish/versioning
 # In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
 # Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+# https://developer.apple.com/library/arcahive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
@@ -56,6 +56,9 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.20.0
   cached_network_image: ^3.4.1
+  devtools_extensions: ^0.4.0
+  cloud_functions: ^5.6.1
+  
   
 
 
@@ -85,6 +88,12 @@ flutter:
     - assets/images/icons8-facebook-48.png
     - assets/images/icons8-google-48.png
     - assets/images/TABUK-new-logo.png
+  # fonts:
+  #   - family: NotoSans
+  #     fonts:
+  #       - asset: assets/fonts/NotoSans-Regular.ttf
+  #       - asset: assets/fonts/NotoSans-Bold.ttf
+  #         weight: 700
 
   # To add assets to your application, add an assets section, like this:
   # assets:
